# Console-Chess

./: Board.h  CMakeLists.txt  Chess.h  Move.h  Pieces_I.h  Players_I.h  README.md  main.cpp
Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Players/: HumanPlayer.h  MonteCarloPlayer.h  Player.h  RandomPlayer.h
